# infinity-mcp-server

./: .gitignore  LICENSE  PRD.md  README.md  example_usage.py  mcp-config-example.json  pyproject.toml
src/infinity_mcp_server/: __init__.py  models.py  server.py  storage.py
tests/: __init__.py  test_integration.py  test_storage.py
