[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infinity-mcp-server"
version = "1.0.0"
description = "MCP Server for structured memory management for AI coding agents"
authors = [{name = "Hemanth Pai", email = "hemanthpai@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "memory", "ai", "agents", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hemanthpai/infinity-mcp-server"
Repository = "https://github.com/hemanthpai/infinity-mcp-server"
Issues = "https://github.com/hemanthpai/infinity-mcp-server/issues"

[project.scripts]
infinity-mcp-server = "infinity_mcp_server.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
